--- a/DiscordEmotes/DiscordEmotes.csproj
+++ b/DiscordEmotes/DiscordEmotes.csproj
@@ -6,6 +6,11 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <PublishSingleFile>true</PublishSingleFile>
+        <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
+    </PropertyGroup>
+    
+    <PropertyGroup>
+        <DebugType>embedded</DebugType>
     </PropertyGroup>
     
     <PropertyGroup>
