--- a/DiscordEmotes/DiscordEmotes.csproj
+++ b/DiscordEmotes/DiscordEmotes.csproj
@@ -17,6 +17,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Common\" />
+    <Folder Include="Common\Extensions\" />
     <Folder Include="Persistence\" />
   </ItemGroup>
 
